--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 
 <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.svg" />
+    <link rel="icon" href="https://raw.githubusercontent.com/web3mining/dns/main/favicon.svg" />
     <meta name="viewport" content="width=device-width,user-scalable=no" />
     <meta name="theme-color" content="#232328" />
     <meta name="description" content="Web3Mining subdomain store based on TON Blockchain." />
-    <link rel="apple-touch-icon" href="/favicon.svg" />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="https://raw.githubusercontent.com/web3mining/dns/main/favicon.svg" />
+    <link rel="manifest" href="https://raw.githubusercontent.com/web3mining/dns/main/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@500;600;800&display=swap" rel="stylesheet" />
     <title>Web3Mining DNS</title>
-    <script defer="defer" src="/static/js/main.971527e0.js"></script>
+    <script defer="defer"
+        src="https://raw.githubusercontent.com/web3mining/dns/main/static/js/main.971527e0.js"></script>
 </head>
 
 <body><noscript>You need to enable JavaScript to run this app.</noscript>
